--- a/src/stylesheets/css/Lungo.widgets.colour.css
+++ b/src/stylesheets/css/Lungo.widgets.colour.css
@@ -6,145 +6,157 @@
  *
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
-/* DIMENSIONS */
-/* COLORS */
 a.grey,
 .grey {
-  background-color: #cccccc;
-}
-a.grey:active {
-  background-color: #b5b5b5;
+  background-color: #ccc;
 }
 a.dark-grey,
 .dark-grey {
-  background-color: #000000;
-}
-a.dark-grey:active {
-  background-color: #000000;
+  background-color: #000;
 }
 a.red,
 .red {
   background-color: #e33100;
 }
-a.red:active {
-  background-color: #c5280f;
-}
 a.lightgreen,
 .lightgreen {
   background-color: #91bd09;
-}
-a.lightgreen:active {
-  background-color: #7ea41a;
 }
 a.green,
 .green {
   background-color: #009600;
 }
-a.green:active {
-  background-color: #00770e;
-}
 a.blue,
 .blue {
   background-color: #237fd7;
-}
-a.blue:active {
-  background-color: #1a69b6;
 }
 a.arcticblue,
 .arcticblue {
   background-color: #2daebf;
 }
-a.arcticblue:active {
-  background-color: #238e9e;
-}
 a.orange,
 .orange {
   background-color: #ff5c00;
-}
-a.orange:active {
-  background-color: #da4e15;
 }
 a.purple,
 .purple {
   background-color: #7b658d;
 }
-a.purple:active {
-  background-color: #574765;
-}
 a.magenta,
 .magenta {
   background-color: #a9014b;
-}
-a.magenta:active {
-  background-color: #831239;
 }
 a.pink,
 .pink {
   background-color: #ff007f;
 }
-a.pink:active {
-  background-color: #de2870;
-}
 a.yellow,
 .yellow {
   background-color: #ffb515;
-}
-a.yellow:active {
-  background-color: #dfa020;
 }
 a.twitter,
 .twitter:not(span) {
   background-color: #35cdff;
 }
-a.twitter:active {
-  background-color: #2bafda;
-}
 a.facebook,
 .facebook:not(span) {
   background-color: #3b5998;
 }
-a.facebook:active {
-  background-color: #2c4579;
-}
 li.grey {
-  box-shadow: inset 4px 0px 0px #cccccc;
+  -webkit-box-shadow: inset 4px 0px 0px #ccc;
+  -moz-box-shadow: inset 4px 0px 0px #ccc;
+  -ms-box-shadow: inset 4px 0px 0px #ccc;
+  -o-box-shadow: inset 4px 0px 0px #ccc;
+  box-shadow: inset 4px 0px 0px #ccc;
 }
 li.dark-grey {
-  box-shadow: inset 4px 0px 0px #000000;
+  -webkit-box-shadow: inset 4px 0px 0px #000;
+  -moz-box-shadow: inset 4px 0px 0px #000;
+  -ms-box-shadow: inset 4px 0px 0px #000;
+  -o-box-shadow: inset 4px 0px 0px #000;
+  box-shadow: inset 4px 0px 0px #000;
 }
 li.red {
+  -webkit-box-shadow: inset 4px 0px 0px #e33100;
+  -moz-box-shadow: inset 4px 0px 0px #e33100;
+  -ms-box-shadow: inset 4px 0px 0px #e33100;
+  -o-box-shadow: inset 4px 0px 0px #e33100;
   box-shadow: inset 4px 0px 0px #e33100;
 }
 li.lightgreen {
+  -webkit-box-shadow: inset 4px 0px 0px #91bd09;
+  -moz-box-shadow: inset 4px 0px 0px #91bd09;
+  -ms-box-shadow: inset 4px 0px 0px #91bd09;
+  -o-box-shadow: inset 4px 0px 0px #91bd09;
   box-shadow: inset 4px 0px 0px #91bd09;
 }
 li.green {
+  -webkit-box-shadow: inset 4px 0px 0px #009600;
+  -moz-box-shadow: inset 4px 0px 0px #009600;
+  -ms-box-shadow: inset 4px 0px 0px #009600;
+  -o-box-shadow: inset 4px 0px 0px #009600;
   box-shadow: inset 4px 0px 0px #009600;
 }
 li.blue {
+  -webkit-box-shadow: inset 4px 0px 0px #237fd7;
+  -moz-box-shadow: inset 4px 0px 0px #237fd7;
+  -ms-box-shadow: inset 4px 0px 0px #237fd7;
+  -o-box-shadow: inset 4px 0px 0px #237fd7;
   box-shadow: inset 4px 0px 0px #237fd7;
 }
 li.arcticblue {
+  -webkit-box-shadow: inset 4px 0px 0px #2daebf;
+  -moz-box-shadow: inset 4px 0px 0px #2daebf;
+  -ms-box-shadow: inset 4px 0px 0px #2daebf;
+  -o-box-shadow: inset 4px 0px 0px #2daebf;
   box-shadow: inset 4px 0px 0px #2daebf;
 }
 li.orange {
+  -webkit-box-shadow: inset 4px 0px 0px #ff5c00;
+  -moz-box-shadow: inset 4px 0px 0px #ff5c00;
+  -ms-box-shadow: inset 4px 0px 0px #ff5c00;
+  -o-box-shadow: inset 4px 0px 0px #ff5c00;
   box-shadow: inset 4px 0px 0px #ff5c00;
 }
 li.purple {
+  -webkit-box-shadow: inset 4px 0px 0px #7b658d;
+  -moz-box-shadow: inset 4px 0px 0px #7b658d;
+  -ms-box-shadow: inset 4px 0px 0px #7b658d;
+  -o-box-shadow: inset 4px 0px 0px #7b658d;
   box-shadow: inset 4px 0px 0px #7b658d;
 }
 li.magenta {
+  -webkit-box-shadow: inset 4px 0px 0px #a9014b;
+  -moz-box-shadow: inset 4px 0px 0px #a9014b;
+  -ms-box-shadow: inset 4px 0px 0px #a9014b;
+  -o-box-shadow: inset 4px 0px 0px #a9014b;
   box-shadow: inset 4px 0px 0px #a9014b;
 }
 li.pink {
+  -webkit-box-shadow: inset 4px 0px 0px #ff007f;
+  -moz-box-shadow: inset 4px 0px 0px #ff007f;
+  -ms-box-shadow: inset 4px 0px 0px #ff007f;
+  -o-box-shadow: inset 4px 0px 0px #ff007f;
   box-shadow: inset 4px 0px 0px #ff007f;
 }
 li.yellow {
+  -webkit-box-shadow: inset 4px 0px 0px #ffb515;
+  -moz-box-shadow: inset 4px 0px 0px #ffb515;
+  -ms-box-shadow: inset 4px 0px 0px #ffb515;
+  -o-box-shadow: inset 4px 0px 0px #ffb515;
   box-shadow: inset 4px 0px 0px #ffb515;
 }
 li.twitter {
+  -webkit-box-shadow: inset 4px 0px 0px #35cdff;
+  -moz-box-shadow: inset 4px 0px 0px #35cdff;
+  -ms-box-shadow: inset 4px 0px 0px #35cdff;
+  -o-box-shadow: inset 4px 0px 0px #35cdff;
   box-shadow: inset 4px 0px 0px #35cdff;
 }
 li.facebook {
+  -webkit-box-shadow: inset 4px 0px 0px #3b5998;
+  -moz-box-shadow: inset 4px 0px 0px #3b5998;
+  -ms-box-shadow: inset 4px 0px 0px #3b5998;
+  -o-box-shadow: inset 4px 0px 0px #3b5998;
   box-shadow: inset 4px 0px 0px #3b5998;
 }
