--- a/src/stylesheets/Lungo.theme.default.less
+++ b/src/stylesheets/Lungo.theme.default.less
@@ -216,10 +216,9 @@ footer > nav > a, nav.groupbar > a{
 
 
 /* @group .button */
-a.button {
+.button, button {
     .border-radius(@form-border-radius);
 
-    // .box-shadow(~"inset 1px 0 0 rgba(0,0,0,0.2), inset 0 1px 0 rgba(0,0,0,0.2), inset -1px 0 0 rgba(0,0,0,0.2), inset 0 -1px 0 rgba(0,0,0,0.2), inset 0 2px 0 rgba(255,255,255, 0.2)");
     .box-shadow(~"inset 0 2px 0 rgba(255,255,255, 0.2)");
 
     font-weight: bold;
@@ -227,7 +226,25 @@ a.button {
 
     &:active { .box-shadow(~"inset 0 10px 30px rgba(0,0,0,0.2), inset 0 -2px 4px rgba(0,0,0,0.3)"); }
 }
-
+  // & .button, button
+  //   background-color: color
+  //   color: white
+  //   border-radius 1px
+  //   box-shadow inset 0 1px 0 rgba(255,255,255,0.2)
+  //   border: solid 1px rgba(0,0,0,0.1)
+  //   &:active
+  //     box-shadow inset 0 0 128px rgba(0,0,0,0.25)
+  //     border-color: none
+  //   &.secondary
+  //     background-color: color_secondary
+  //     color: #666
+  //     text-shadow: 0 1px 0 rgba(255,255,255,0.25)
+  //   &.success
+  //     background-color: color_success
+  //   &.alert
+  //     background-color: color_alert
+  //   &.transparent
+  //     background: none !important
 /* @end */
 
 /* @group <form> */
