--- a/src/stylesheets/css/Lungo.widgets.pull.css
+++ b/src/stylesheets/css/Lungo.widgets.pull.css
@@ -1,5 +1,11 @@
-/* DIMENSIONS */
-/* COLORS */
+/**
+ * Stylesheet
+ *
+ * @namespace Lungo.Widgets
+ * @class Pull
+ *
+ * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
+ */
 section > [data-control="pull"] {
   position: absolute;
   z-index: -1;
@@ -15,11 +21,11 @@ section > [data-control="pull"] > .icon {
   height: 48px;
   font-size: 44px;
   line-height: 48px;
-  -webkit-transition: all 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
-  -moz-transition: all 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
-  -ms-transition: all 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
-  -o-transition: all 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
-  transition: all 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  -webkit-transition: all 300ms;
+  -moz-transition: all 300ms;
+  -ms-transition: all 300ms;
+  -o-transition: all 300ms;
+  transition: all 300ms;
 }
 section > [data-control="pull"] > .loading {
   display: none;
