--- a/src/stylesheets/css/Lungo.widgets.loading.css
+++ b/src/stylesheets/css/Lungo.widgets.loading.css
@@ -6,8 +6,6 @@
  *
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
-/* DIMENSIONS */
-/* COLORS */
 .loading {
   position: relative;
   left: 50%;
@@ -26,148 +24,152 @@
   -moz-animation: none;
   display: none;
 }
-.loading  > span {
+.loading > span {
   left: 50%;
   margin-left: -0.05em;
 }
-.loading  > span,
-.loading  > span::before,
-.loading  > span::after {
+.loading > span,
+.loading > span::before,
+.loading > span::after {
   display: block;
   position: absolute;
-  width: .1em;
-  height: .25em;
+  width: 0.1em;
+  height: 0.25em;
   top: 0;
   -webkit-transform-origin: 0.05em 0.5em;
   -moz-transform-origin: 0.05em 0.5em;
   -ms-transform-origin: 0.05em 0.5em;
   -o-transform-origin: 0.05em 0.5em;
   transform-origin: 0.05em 0.5em;
-  border-radius: .1em;
+  -webkit-border-radius: 0.1em;
+  -moz-border-radius: 0.1em;
+  -ms-border-radius: 0.1em;
+  -o-border-radius: 0.1em;
+  border-radius: 0.1em;
 }
-.loading  > span::before,
-.loading  > span::after {
+.loading > span::before,
+.loading > span::after {
   content: " ";
 }
-.loading  > span.top {
+.loading > span.top {
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -ms-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform: rotate(0deg);
 }
-.loading  > span.right {
+.loading > span.right {
   -webkit-transform: rotate(90deg);
   -moz-transform: rotate(90deg);
   -ms-transform: rotate(90deg);
   -o-transform: rotate(90deg);
   transform: rotate(90deg);
 }
-.loading  > span.bottom {
+.loading > span.bottom {
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
   -o-transform: rotate(180deg);
   transform: rotate(180deg);
 }
-.loading  > span.left {
+.loading > span.left {
   -webkit-transform: rotate(270deg);
   -moz-transform: rotate(270deg);
   -ms-transform: rotate(270deg);
   -o-transform: rotate(270deg);
   transform: rotate(270deg);
 }
-.loading  > span::before {
+.loading > span::before {
   -webkit-transform: rotate(30deg);
   -moz-transform: rotate(30deg);
   -ms-transform: rotate(30deg);
   -o-transform: rotate(30deg);
   transform: rotate(30deg);
 }
-.loading  > span::after {
+.loading > span::after {
   -webkit-transform: rotate(-30deg);
   -moz-transform: rotate(-30deg);
   -ms-transform: rotate(-30deg);
   -o-transform: rotate(-30deg);
   transform: rotate(-30deg);
 }
-.loading  > span.top {
-  background-color: rgba(0, 0, 0, 0.99);
+.loading > span.top {
+  background-color: rgba(0,0,0,0.99);
 }
-.loading  > span.top::after {
-  background-color: rgba(0, 0, 0, 0.9);
+.loading > span.top::after {
+  background-color: rgba(0,0,0,0.9);
 }
-.loading  > span.left::before {
-  background-color: rgba(0, 0, 0, 0.8);
+.loading > span.left::before {
+  background-color: rgba(0,0,0,0.8);
 }
-.loading  > span.left {
-  background-color: rgba(0, 0, 0, 0.7);
+.loading > span.left {
+  background-color: rgba(0,0,0,0.7);
 }
-.loading  > span.left::after {
-  background-color: rgba(0, 0, 0, 0.6);
+.loading > span.left::after {
+  background-color: rgba(0,0,0,0.6);
 }
-.loading  > span.bottom::before {
-  background-color: rgba(0, 0, 0, 0.5);
+.loading > span.bottom::before {
+  background-color: rgba(0,0,0,0.5);
 }
-.loading  > span.bottom {
-  background-color: rgba(0, 0, 0, 0.4);
+.loading > span.bottom {
+  background-color: rgba(0,0,0,0.4);
 }
-.loading  > span.bottom::after {
-  background-color: rgba(0, 0, 0, 0.35);
+.loading > span.bottom::after {
+  background-color: rgba(0,0,0,0.35);
 }
-.loading  > span.right::before {
-  background-color: rgba(0, 0, 0, 0.3);
+.loading > span.right::before {
+  background-color: rgba(0,0,0,0.3);
 }
-.loading  > span.right {
-  background-color: rgba(0, 0, 0, 0.25);
+.loading > span.right {
+  background-color: rgba(0,0,0,0.25);
 }
-.loading  > span.right::after {
-  background-color: rgba(0, 0, 0, 0.2);
+.loading > span.right::after {
+  background-color: rgba(0,0,0,0.2);
 }
-.loading  > span.top::before {
-  background-color: rgba(0, 0, 0, 0.15);
+.loading > span.top::before {
+  background-color: rgba(0,0,0,0.15);
 }
 .loading.white > span.top {
-  background-color: rgba(255, 255, 255, 0.99);
+  background-color: rgba(255,255,255,0.99);
 }
 .loading.white > span.top::after {
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(255,255,255,0.9);
 }
 .loading.white > span.left::before {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255,255,255,0.8);
 }
 .loading.white > span.left {
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: rgba(255,255,255,0.7);
 }
 .loading.white > span.left::after {
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255,255,255,0.6);
 }
 .loading.white > span.bottom::before {
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255,255,255,0.5);
 }
 .loading.white > span.bottom {
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(255,255,255,0.4);
 }
 .loading.white > span.bottom::after {
-  background-color: rgba(255, 255, 255, 0.35);
+  background-color: rgba(255,255,255,0.35);
 }
 .loading.white > span.right::before {
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(255,255,255,0.3);
 }
 .loading.white > span.right {
-  background-color: rgba(255, 255, 255, 0.25);
+  background-color: rgba(255,255,255,0.25);
 }
 .loading.white > span.right::after {
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255,255,255,0.2);
 }
 .loading.white > span.top::before {
-  background-color: rgba(255, 255, 255, 0.15);
+  background-color: rgba(255,255,255,0.15);
 }
 section.show .loading,
 section.current .loading,
 .notification .loading {
-  -webkit-animation: rotatingLoader .5s  infinite linear;
-  -moz-animation: rotatingLoader .5s  infinite linear;
+  -webkit-animation: rotatingLoader 0.5s infinite linear;
+  moz-animation: rotatingLoader 0.5s infinite linear;
 }
 @-webkit-keyframes rotatingLoader {
   0% {
@@ -177,6 +179,7 @@ section.current .loading,
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
+
   8.32% {
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
@@ -184,6 +187,7 @@ section.current .loading,
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
+
   8.33% {
     -webkit-transform: rotate(30deg);
     -moz-transform: rotate(30deg);
@@ -191,6 +195,7 @@ section.current .loading,
     -o-transform: rotate(30deg);
     transform: rotate(30deg);
   }
+
   16.65% {
     -webkit-transform: rotate(30deg);
     -moz-transform: rotate(30deg);
@@ -198,6 +203,7 @@ section.current .loading,
     -o-transform: rotate(30deg);
     transform: rotate(30deg);
   }
+
   16.66% {
     -webkit-transform: rotate(60deg);
     -moz-transform: rotate(60deg);
@@ -205,6 +211,7 @@ section.current .loading,
     -o-transform: rotate(60deg);
     transform: rotate(60deg);
   }
+
   24.99% {
     -webkit-transform: rotate(60deg);
     -moz-transform: rotate(60deg);
@@ -212,6 +219,7 @@ section.current .loading,
     -o-transform: rotate(60deg);
     transform: rotate(60deg);
   }
+
   25% {
     -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
@@ -219,6 +227,7 @@ section.current .loading,
     -o-transform: rotate(90deg);
     transform: rotate(90deg);
   }
+
   33.32% {
     -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
@@ -226,6 +235,7 @@ section.current .loading,
     -o-transform: rotate(90deg);
     transform: rotate(90deg);
   }
+
   33.33% {
     -webkit-transform: rotate(120deg);
     -moz-transform: rotate(120deg);
@@ -233,6 +243,7 @@ section.current .loading,
     -o-transform: rotate(120deg);
     transform: rotate(120deg);
   }
+
   41.65% {
     -webkit-transform: rotate(120deg);
     -moz-transform: rotate(120deg);
@@ -240,6 +251,7 @@ section.current .loading,
     -o-transform: rotate(120deg);
     transform: rotate(120deg);
   }
+
   41.66% {
     -webkit-transform: rotate(150deg);
     -moz-transform: rotate(150deg);
@@ -247,6 +259,7 @@ section.current .loading,
     -o-transform: rotate(150deg);
     transform: rotate(150deg);
   }
+
   49.99% {
     -webkit-transform: rotate(150deg);
     -moz-transform: rotate(150deg);
@@ -254,6 +267,7 @@ section.current .loading,
     -o-transform: rotate(150deg);
     transform: rotate(150deg);
   }
+
   50% {
     -webkit-transform: rotate(180deg);
     -moz-transform: rotate(180deg);
@@ -261,6 +275,7 @@ section.current .loading,
     -o-transform: rotate(180deg);
     transform: rotate(180deg);
   }
+
   58.32% {
     -webkit-transform: rotate(180deg);
     -moz-transform: rotate(180deg);
@@ -268,6 +283,7 @@ section.current .loading,
     -o-transform: rotate(180deg);
     transform: rotate(180deg);
   }
+
   58.33% {
     -webkit-transform: rotate(210deg);
     -moz-transform: rotate(210deg);
@@ -275,6 +291,7 @@ section.current .loading,
     -o-transform: rotate(210deg);
     transform: rotate(210deg);
   }
+
   66.65% {
     -webkit-transform: rotate(210deg);
     -moz-transform: rotate(210deg);
@@ -282,6 +299,7 @@ section.current .loading,
     -o-transform: rotate(210deg);
     transform: rotate(210deg);
   }
+
   66.66% {
     -webkit-transform: rotate(240deg);
     -moz-transform: rotate(240deg);
@@ -289,6 +307,7 @@ section.current .loading,
     -o-transform: rotate(240deg);
     transform: rotate(240deg);
   }
+
   74.99% {
     -webkit-transform: rotate(240deg);
     -moz-transform: rotate(240deg);
@@ -296,6 +315,7 @@ section.current .loading,
     -o-transform: rotate(240deg);
     transform: rotate(240deg);
   }
+
   75% {
     -webkit-transform: rotate(270deg);
     -moz-transform: rotate(270deg);
@@ -303,6 +323,7 @@ section.current .loading,
     -o-transform: rotate(270deg);
     transform: rotate(270deg);
   }
+
   83.32% {
     -webkit-transform: rotate(270deg);
     -moz-transform: rotate(270deg);
@@ -310,6 +331,7 @@ section.current .loading,
     -o-transform: rotate(270deg);
     transform: rotate(270deg);
   }
+
   83.33% {
     -webkit-transform: rotate(300deg);
     -moz-transform: rotate(300deg);
@@ -317,6 +339,7 @@ section.current .loading,
     -o-transform: rotate(300deg);
     transform: rotate(300deg);
   }
+
   91.65% {
     -webkit-transform: rotate(300deg);
     -moz-transform: rotate(300deg);
@@ -324,6 +347,7 @@ section.current .loading,
     -o-transform: rotate(300deg);
     transform: rotate(300deg);
   }
+
   91.66% {
     -webkit-transform: rotate(330deg);
     -moz-transform: rotate(330deg);
@@ -331,6 +355,7 @@ section.current .loading,
     -o-transform: rotate(330deg);
     transform: rotate(330deg);
   }
+
   100% {
     -webkit-transform: rotate(330deg);
     -moz-transform: rotate(330deg);
@@ -347,6 +372,7 @@ section.current .loading,
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
+
   8.32% {
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
@@ -354,6 +380,7 @@ section.current .loading,
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
+
   8.33% {
     -webkit-transform: rotate(30deg);
     -moz-transform: rotate(30deg);
@@ -361,6 +388,7 @@ section.current .loading,
     -o-transform: rotate(30deg);
     transform: rotate(30deg);
   }
+
   16.65% {
     -webkit-transform: rotate(30deg);
     -moz-transform: rotate(30deg);
@@ -368,6 +396,7 @@ section.current .loading,
     -o-transform: rotate(30deg);
     transform: rotate(30deg);
   }
+
   16.66% {
     -webkit-transform: rotate(60deg);
     -moz-transform: rotate(60deg);
@@ -375,6 +404,7 @@ section.current .loading,
     -o-transform: rotate(60deg);
     transform: rotate(60deg);
   }
+
   24.99% {
     -webkit-transform: rotate(60deg);
     -moz-transform: rotate(60deg);
@@ -382,6 +412,7 @@ section.current .loading,
     -o-transform: rotate(60deg);
     transform: rotate(60deg);
   }
+
   25% {
     -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
@@ -389,6 +420,7 @@ section.current .loading,
     -o-transform: rotate(90deg);
     transform: rotate(90deg);
   }
+
   33.32% {
     -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
@@ -396,6 +428,7 @@ section.current .loading,
     -o-transform: rotate(90deg);
     transform: rotate(90deg);
   }
+
   33.33% {
     -webkit-transform: rotate(120deg);
     -moz-transform: rotate(120deg);
@@ -403,6 +436,7 @@ section.current .loading,
     -o-transform: rotate(120deg);
     transform: rotate(120deg);
   }
+
   41.65% {
     -webkit-transform: rotate(120deg);
     -moz-transform: rotate(120deg);
@@ -410,6 +444,7 @@ section.current .loading,
     -o-transform: rotate(120deg);
     transform: rotate(120deg);
   }
+
   41.66% {
     -webkit-transform: rotate(150deg);
     -moz-transform: rotate(150deg);
@@ -417,6 +452,7 @@ section.current .loading,
     -o-transform: rotate(150deg);
     transform: rotate(150deg);
   }
+
   49.99% {
     -webkit-transform: rotate(150deg);
     -moz-transform: rotate(150deg);
@@ -424,6 +460,7 @@ section.current .loading,
     -o-transform: rotate(150deg);
     transform: rotate(150deg);
   }
+
   50% {
     -webkit-transform: rotate(180deg);
     -moz-transform: rotate(180deg);
@@ -431,6 +468,7 @@ section.current .loading,
     -o-transform: rotate(180deg);
     transform: rotate(180deg);
   }
+
   58.32% {
     -webkit-transform: rotate(180deg);
     -moz-transform: rotate(180deg);
@@ -438,6 +476,7 @@ section.current .loading,
     -o-transform: rotate(180deg);
     transform: rotate(180deg);
   }
+
   58.33% {
     -webkit-transform: rotate(210deg);
     -moz-transform: rotate(210deg);
@@ -445,6 +484,7 @@ section.current .loading,
     -o-transform: rotate(210deg);
     transform: rotate(210deg);
   }
+
   66.65% {
     -webkit-transform: rotate(210deg);
     -moz-transform: rotate(210deg);
@@ -452,6 +492,7 @@ section.current .loading,
     -o-transform: rotate(210deg);
     transform: rotate(210deg);
   }
+
   66.66% {
     -webkit-transform: rotate(240deg);
     -moz-transform: rotate(240deg);
@@ -459,6 +500,7 @@ section.current .loading,
     -o-transform: rotate(240deg);
     transform: rotate(240deg);
   }
+
   74.99% {
     -webkit-transform: rotate(240deg);
     -moz-transform: rotate(240deg);
@@ -466,6 +508,7 @@ section.current .loading,
     -o-transform: rotate(240deg);
     transform: rotate(240deg);
   }
+
   75% {
     -webkit-transform: rotate(270deg);
     -moz-transform: rotate(270deg);
@@ -473,6 +516,7 @@ section.current .loading,
     -o-transform: rotate(270deg);
     transform: rotate(270deg);
   }
+
   83.32% {
     -webkit-transform: rotate(270deg);
     -moz-transform: rotate(270deg);
@@ -480,6 +524,7 @@ section.current .loading,
     -o-transform: rotate(270deg);
     transform: rotate(270deg);
   }
+
   83.33% {
     -webkit-transform: rotate(300deg);
     -moz-transform: rotate(300deg);
@@ -487,6 +532,7 @@ section.current .loading,
     -o-transform: rotate(300deg);
     transform: rotate(300deg);
   }
+
   91.65% {
     -webkit-transform: rotate(300deg);
     -moz-transform: rotate(300deg);
@@ -494,6 +540,7 @@ section.current .loading,
     -o-transform: rotate(300deg);
     transform: rotate(300deg);
   }
+
   91.66% {
     -webkit-transform: rotate(330deg);
     -moz-transform: rotate(330deg);
@@ -501,6 +548,7 @@ section.current .loading,
     -o-transform: rotate(330deg);
     transform: rotate(330deg);
   }
+
   100% {
     -webkit-transform: rotate(330deg);
     -moz-transform: rotate(330deg);
