--- a/src/stylesheets/lungo.widgets.notification.styl
+++ b/src/stylesheets/lungo.widgets.notification.styl
@@ -2,7 +2,7 @@
  * Stylesheet
  *
  * @namespace Lungo.Widgets
- * @class Pull
+ * @class Notification
  *
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
@@ -10,12 +10,11 @@
 @import "import/constants.styl"
 @import "import/vendor.styl"
 
-@notification_opacity = rgba(0,0,0,0.5)
-@keyframe = 200ms
-
-@modal_opacity = rgba(0,0,0,0.8)
-@modal_size = 104px
-@modal_size_middle = 52px
+OPACITY = rgba(0,0,0,0.5)
+KEYFRAME = 200ms
+MODAL_OPACITY = rgba(0,0,0,0.8)
+MODAL_SIZE = 104px
+MODAL_SIZE_middle = 52px
 
 .notification
   position: absolute
@@ -26,16 +25,16 @@
   display: none
 
   &.modal
-    background-color: @notification_opacity
+    background-color: OPACITY
 
   & .window
     position: relative
     opacity: 0
-    transition( all @keyframe DEFAULT_TRANSITION )
+    transition( all KEYFRAME DEFAULT_TRANSITION )
 
     &.show
       opacity: 1
-      Transition-delay( @keyframe )
+      Transition-delay( KEYFRAME )
 
     & strong, small
       display: block
@@ -47,10 +46,10 @@
     &:not(.special)
       left: 50%
       top: 50%
-      width: @modal_size
-      margin: -@modal_size_middle auto auto -@modal_size_middle
+      width: MODAL_SIZE
+      margin: -MODAL_SIZE_middle auto auto -MODAL_SIZE_middle
       padding: 8px
-      background-color: @modal_opacity
+      background-color: MODAL_OPACITY
       text-align: center
       transform( scale(0.8) )
 
@@ -69,69 +68,61 @@
         white-space: nowrap
         text-overflow: ellipsis
 
+    &.confirm, &.notify
+      top: 0
+      font-size: 1.1em !important
+      transform( translate3d(0, -100%, 0) )
+
+      &.show
+        transform( translate3d(0, 0%, 0) )
+
+      & .icon
+        float: left
+        font-size: 2.0em
+        margin: -3px 10px 0 0
+
+    &.confirm
+      opacity: 1
+      padding: 10px 12px
+      & p
+        height: 44px
+      & .button
+        width: 42%
+        &:last-child
+          float: right
+
+    &.notify
+        padding: 8px
+        top:  0
+
+    &.url
+      left: 0
+      top: 0
+      width: 280px
+      height: auto
+      margin: 64px auto 0px
+      padding: 0px
+
+      & .close
+        position: absolute
+        top: -14px
+        right: -14px
+
+        font-size: 14px
+        line-height: 24px
+        font-weight: normal
+        width: 24px
+        height: 24px
+        border-radius: 14px
 
 
-//         &.confirm, &.notify
-//             top: 0
-//             font-size: 1.1em !important
-//             .transform(translate3d(0, -100%, 0))
+  & .window.working span
+    -webkit-animation: notification-working 1s infinite
 
-//             &.show  .transform(translate3d(0, 0%, 0))
-
-//             & .icon
-//                 float: left
-//                 font-size: 2.0em
-//                 margin: -3px 10px 0 0
-
-
-
-//         &.confirm
-//             opacity: 1
-//             padding: 10px 12px
-
-//             & p  height: 44px
-
-//             & .button
-//                width: 42%
-//                &:last-child float: right
-
-
-
-//         &.notify
-//             padding: 8px
-//             top:  0
-
-
-//         &.url
-//             left: 0
-//             top: 0
-//             width: 280px
-//             height: auto
-//             margin: 64px auto 0px
-//             padding: 0px
-
-//             & .close
-//                 position: absolute
-//                 top: -14px
-//                 right: -14px
-
-//                 font-size: 14px
-//                 line-height: 24px
-//                 font-weight: normal
-//                 width: 24px
-//                 height: 24px
-//                 border-radius: 14px
-
-
-
-
-
-// .notification .window.working span
-//     -webkit-animation: notification-working 1s infinite
-
-
-// @-webkit-keyframes notification-working
-//     0% opacity: 1
-//     50% opacity: 0
-//     100% opacity: 1
-
+@-webkit-keyframes notification-working
+    0%
+      opacity: 1
+    50%
+      opacity: 0
+    100%
+      opacity: 1
